Closed Bug 812278 Opened 13 years ago Closed 13 years ago

$OBJDIR/media/mtransport/standalone/*.cpp:87:131: warning: extra ‘;’ [-pedantic]

Categories

(Core :: WebRTC, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug)

Details

(Whiteboard: [qa-])

Attachments

(1 file)

I get build warnings like: > obj/media/mtransport/standalone/nricectx.cpp:87:131: warning: extra ‘;’ [-pedantic] for most of the cpp files in media/mtransport/, ever since bug 809950 changed the definition of MOZ_MTLOG_MODULE to make it no longer require a semicolon after it. We should drop all those no-longer-necessary semicolons to fix these warnings.
Attached patch fixSplinter Review
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Summary: $OBJDIR/media/mtransport/standalone/nricectx.cpp:87:131: warning: extra ‘;’ [-pedantic] → $OBJDIR/media/mtransport/standalone/*.cpp:87:131: warning: extra ‘;’ [-pedantic]
Attachment #682100 - Flags: review?(rjesup)
Attachment #682100 - Flags: review?(rjesup) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Whiteboard: [qa-]
We don't build with -pedantic anymore, so we don't warn about this now, but just for consistency, I fixed 3 other instances of this that I ran across, for consistency: https://hg.mozilla.org/integration/mozilla-inbound/rev/30a252389a78 (Those were the last few MOZ_MTLOG_MODULE invocations w/ a trailing semicolon.)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: