Bug 812278: Remove no-longer-necessary semicolons after MOZ_MTLOG_MODULE macro invocations, to fix GCC pedantic build warnings. r=jesup